constructor fixed